--- a/test_task/src/App.scss
+++ b/test_task/src/App.scss
@@ -10,10 +10,20 @@ body{
         width: 22vw;
         height: 100%;
         transition: 1s ease;
+        display: flex;
+        flex-direction:column;
+        hr{
+          width: 100%;
+          height: 20px;
+          border: 0;
+          box-shadow: inset 0 16px 31px -31px rgba(0,0,0,0.80);
+        }
         .btn-hide{
             float: right;
             padding: 3%;
             cursor: pointer;
+            justify-content: flex-end;
+            display: flex;
             label{
                 font-size: 1.5em;
                 margin-right: 1vw;
@@ -44,7 +54,7 @@ body{
             justify-content: center;
             align-items: center;
             display: flex;
-            width: 20%;
+            width: 17%;
             cursor: pointer;
             i{
                 padding-top: 3px;
@@ -63,6 +73,107 @@ body{
         height: 500px;
         background:url("public/social.jpg")top repeat;
         background-size: 50%;
+        padding: 2vw;
+        .content-wrapper{
+            background: #645a5a52;
+            width: 100%;
+            height: 100%;
+            display:flex;
+            justify-content: center;
+            .content-gallery{
+                width:50%;
+                .gallery{
+                    background: #0000007d;
+                    .photo-current{
+                        display: flex;
+                        flex-direction: column;
+                        background: url("public/photos/pic_1.jpg") center no-repeat;
+                        background-size:100%;
+                        .zoom-panel{
+                            padding: 0.5vw 0 0 0.5vw;
+                            button:last-child{
+                                margin: 0;
+                            }
+                            display: flex;
+                            flex-direction: column;
+                            float:left;
+                            align-items: flex-start;
+                            button{
+                                display: flex;
+                                justify-content: center;
+                                flex-direction: column;
+                                background: #00ffff00;
+                                outline: none;
+                                width: 2.5vw;
+                                height: 2.5vw;
+                                border: #c5c5c5 solid 0.1vw;
+                                margin-bottom: 7px;
+                                cursor: pointer;
+                                padding: 0;
+                                color: #c5c5c5;
+                                i{
+                                    width: 100%;
+                                    font-size: 0.7vw;
+                                }
+                            }
+                        }
+                        .wrapper-dp{
+                            height: 16vw;
+                            display: flex;
+                            .direction-panel{
+                                justify-content: space-between;
+                                display: flex;
+                                width: 100%;
+                                button{
+                                    background: #00ffff00;
+                                    outline: none;
+                                    cursor: pointer;
+                                    padding: 5px;
+                                    border:none;
+                                    color: #c5c5c5;
+                                    .dp{
+                                        font-size: 6vw;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                    .navigation-panel{
+                        background: #333333;
+                        height: 6vw;
+                        display: flex;
+                        justify-content: space-between;
+                        width: 100%;
+                        .wrapper-ps{
+                            overflow: hidden;
+                            width:100%;
+                            .wrapper-w-ps{
+                                width: 236.8%;
+                                height: 100%;
+                                .photo-selection{
+                                    height: 100%;
+                                    width: 100%;
+                                    display: flex;
+                                    position: relative;
+                                }
+                            }
+
+                        }
+
+                        .np{
+                            width: 3%;
+                            font-size: 2vw;
+                            justify-content: center;
+                            display: flex;
+                            flex-direction: column;
+                            text-align:center;
+
+                        }
+                    }
+                }
+            }
+
+        }
     }
     .footer-parent{
         display:flex;
