приближение отдаление фото

--- a/test_task/src/App.scss
+++ b/test_task/src/App.scss
@@ -98,7 +98,7 @@ body{
                             flex-direction: column;
                             float:left;
                             align-items: flex-start;
-                            button{
+                            .z-p-b{
                                 display: flex;
                                 justify-content: center;
                                 flex-direction: column;
