--- a/test_task/src/App.scss
+++ b/test_task/src/App.scss
@@ -102,6 +102,7 @@ body{
                             overflow: hidden;
                             .photo{
                                 height: 100%;
+                                position:relative;
                             }
                         }
                         .wrapper-panel{
