--- a/test_task/src/App.scss
+++ b/test_task/src/App.scss
@@ -93,7 +93,7 @@ body{
                         background-position-x: 50%;
                         background-position-y:50%;
                         transition: 1s ease;
-                        height: 280px;
+                        height: 25vw;
                         .wrapper-p{
                             height: inherit;
                             display: flex;
@@ -138,7 +138,7 @@ body{
                                 }
                             }
                             .wrapper-dp{
-                                height: 280px;
+                                height: 28vw;
                                 display: flex;
                                 .direction-panel{
                                     justify-content: space-between;
