--- a/test_task/src/App.scss
+++ b/test_task/src/App.scss
@@ -179,6 +179,7 @@ body{
                                     position: relative;
                                     img{
                                         border: #333333 solid 0.3vw;
+                                        width: 9vw;
                                         &:first-child{
                                             border-left: 0;
                                         }
