--- a/test_task/src/App.scss
+++ b/test_task/src/App.scss
@@ -1,87 +1,47 @@
+@import
+'./components/side_bar/Side_bar.scss',
+'./components/header/Header.scss',
+'./components/content/Content.scss',
+'./components/footer/Footer.scss';
+
+// Smartphones(landscape) and Smartphones(portrait)
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+}
+// Smartphones(landscape)
+@media only screen and (min-width : 321px) {
+
+}
+// Smartphones(portrait)
+@media only screen and (max-width : 320px) {
+
+}
+// iPads(landscape)
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+
+}
+// iPads(portrait)
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+
+}
+// Laptops
+@media only screen and (min-width : 1224px) {
+
+}
+// Large windows
+@media only screen and (min-width : 1824px) {
+
+}
+// Iphone 4
+@media only screen and (-webkit-min-device-pixel-ratio : 1.5),only screen and (min-device-pixel-ratio : 1.5) {
+
+}
 
 body{
     overflow: overlay;
     width: 100%;
-    font-size: 14px;
-    .side-bar{
-        overflow: scroll;
-        position: fixed;
-        background: #FFF;
-        left:-22vw;
-        width: 22vw;
-        height: 100%;
-        transition: 1s ease;
-        display: flex;
-        flex-direction:column;
-        hr{
-          width: 100%;
-          height: 20px;
-          border: 0;
-          box-shadow: inset 0 16px 31px -31px rgba(0,0,0,0.80);
-        }
-        .btn-hide{
-            float: right;
-            padding: 3%;
-            cursor: pointer;
-            justify-content: flex-end;
-            display: flex;
-            label{
-                font-size: 1.5em;
-                margin-right: 1vw;
-                cursor: pointer;
-            }
-        }
-    }
-    .wrapper-content{
-        position: relative;
-        left: 0;
-        transition: 1s ease;
-        .wrapper-shadow{
-            background: #01010000;
-            visibility: hidden;
-            position: fixed;
-            width: 100%;
-            height: 100%;
-            transition:  all 0.5s ease;
-        }
-    }
-    .header-parent{
-        display: flex;
-        background: url("public/cubes.jpg") bottom no-repeat;
-        background-size: 100%;
-        justify-content: space-between;
-        color:#FFF;
-        .btn-menu{
-            justify-content: center;
-            align-items: center;
-            display: flex;
-            width: 17%;
-            cursor: pointer;
-            i{
-                padding-top: 3px;
-                margin-right: 3%;
-            }
-        }
-        .header-parent_log-reg{
-            cursor: pointer;
-            width: 17%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    }
-    .content-parent{
-        height: 500px;
-        background:url("public/social.jpg")top repeat;
-        background-size: 50%;
-        padding: 2vw;
-        .content-wrapper{
-            background: #645a5a52;
-            width: 100%;
-            height: 100%;
-            display:flex;
-            justify-content: center;
-            .content-gallery{
+    font-size: 18px;
+    .content-gallery{
                 width:50%;
                 .gallery{
                     background: #0000007d;
@@ -109,7 +69,7 @@ body{
                             position: absolute;
                             width: 48%;
                             .zoom-panel{
-                                padding: 1vw 0 0 0.5vw;
+                                padding: 0.5vw 0 0 0.5vw;
                                 position: absolute;
                                 button:last-child{
                                     margin: 0;
@@ -127,7 +87,7 @@ body{
                                     width: 2.5vw;
                                     height: 2.5vw;
                                     border: #c5c5c5 solid 0.1vw;
-                                    margin-bottom: 7px;
+                                    margin-bottom: 0.5vw;
                                     cursor: pointer;
                                     padding: 0;
                                     color: #c5c5c5;
@@ -138,7 +98,7 @@ body{
                                 }
                             }
                             .wrapper-dp{
-                                height: 28vw;
+                                height: 25vw;
                                 display: flex;
                                 .direction-panel{
                                     justify-content: space-between;
@@ -204,101 +164,17 @@ body{
                     }
                 }
             }
-
+    .Wrapper-Page{
+        position: relative;
+        left: 0;
+        transition: 1s ease;
+        .Wrapper-Shadow{
+            background: #01010000;
+            visibility: hidden;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            transition:  all 0.5s ease;
         }
     }
-    .footer-parent{
-        display:flex;
-        flex-direction: column;
-        background: url("public/cubes.jpg")bottom no-repeat;
-        background-size: 100%;
-        color: #FFF;
-        .footer-parent_background{
-            background: #0000003b;
-          hr{
-            height: 12px;
-            border: 0;
-            box-shadow: inset 0 15px 12px -11px rgba(0,0,0,0.80);
-          }
-            .footer-parent_container{
-                padding: 2%;
-                .second_subscribe{
-                    width: 32%;
-                    form{
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: space-around;
-                        height: 100%;
-                        label{
-                            text-align: center;
-                            margin-top: -5px;
-                        }
-                        input{
-                            font-size: 1em;
-                            width: inherit;
-                            height: 30px;
-                        }
-                    }
-                }
-            }
-        }
-        .container_first{
-            opacity: 1.5;
-            display:flex;
-            justify-content: space-between;
-            margin-bottom: 2%;
-        }
-        .container_second{
-            opacity: 1.5;
-            display:flex;
-            justify-content: space-between;
-            height: 90px;
-            .second_socials-wrapper{
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
-                .second_socials{
-                    display: flex;
-                }
-                .VK{
-                    a{
-                        :hover{
-                            color: #4688ff;
-                        }
-                    }
-                }
-                .FB{
-                    a{
-                        :hover{
-                            color: #4688ff;
-                        }
-                    }
-                }
-                .Inst{
-                    a{
-                        :hover{
-                            color: #f4b7fd;
-                        }
-                    }
-                }
-                .Youtube{
-                    a{
-                        :hover{
-                            color: #ff0000;
-                        }
-                    }
-                }
-                a{
-                    color: #FFF;
-                }
-                .socials{
-                    margin-right: 100px;
-                    :last-child{
-                        margin-right: 0;
-                    }
-                }
-            }
-        }
-    }
-
 }
