--- a/test_task/src/App.scss
+++ b/test_task/src/App.scss
@@ -6,19 +6,12 @@
 
 // Smartphones(landscape) and Smartphones(portrait)
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-
-}
-// Smartphones(landscape)
-@media only screen and (min-width : 321px) {
-
-}
-// Smartphones(portrait)
-@media only screen and (max-width : 320px) {
-
+    @include header_320px();
+    @include footer_320px();
 }
 // iPads(landscape)
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-
+    @include footer_768px();
 }
 // iPads(portrait)
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
@@ -30,7 +23,6 @@
 }
 // Large windows
 @media only screen and (min-width : 1824px) {
-
 }
 // Iphone 4
 @media only screen and (-webkit-min-device-pixel-ratio : 1.5),only screen and (min-device-pixel-ratio : 1.5) {
