--- a/test_task/src/components/header/Header.scss
+++ b/test_task/src/components/header/Header.scss
@@ -1,8 +1,23 @@
+@mixin header_320px(){
+  .Header{
+    label{
+      display: none;
+    }
+  }
+}
 
 .Header{
+  &:before{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: url("public/cubes.jpg") center repeat-x;
+    width: 100%;
+    background-size: 100%;
+    height: 100%;
+  }
+  position: relative;
   display: flex;
-  background: url("public/cubes.jpg") bottom no-repeat;
-  background-size: 100%;
   justify-content: space-between;
   color:#FFF;
   .fa{
